internal/web/ui/playground/data/broken-relationships/resources/payments-api__Deployment__payments-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"payments-api"},"name":"payments-api","namespace":"payments-api"},"spec":{"replicas":2,"selector":{"matchLabels":{"app":"payments-api"}},"template":{"metadata":{"labels":{"app":"payments-api"}},"spec":{"containers":[{"envFrom":[{"configMapRef":{"name":"payments-config-v2"}}],"image":"nginx:1.27-alpine","name":"payments-api","ports":[{"containerPort":80}],"volumeMounts":[{"mountPath":"/var/cache/payment [...]
  creationTimestamp: "2026-08-16T18:21:53Z"
  generation: 1
  labels:
    app: payments-api
  name: payments-api
  namespace: payments-api
  resourceVersion: "17983"
  uid: af0bd9da-5183-4bfd-adf9-0290c0a8dfa1
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: payments-api
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: payments-api
    spec:
      containers:
      - envFrom:
        - configMapRef:
            name: payments-config-v2
        image: nginx:1.27-alpine
        imagePullPolicy: IfNotPresent
        name: payments-api
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  conditions:
  - lastTransitionTime: "2026-08-16T18:21:53Z"
    lastUpdateTime: "2026-08-16T18:21:53Z"
    message: Deployment does not have minimum availability.
    reason: MinimumReplicasUnavailable
    status: "False"
    type: Available
  - lastTransitionTime: "2026-08-16T18:21:53Z"
    lastUpdateTime: "2026-08-16T18:21:53Z"
    message: ReplicaSet "payments-api-cc7dfd779" is progressing.
    reason: ReplicaSetUpdated
    status: "True"
    type: Progressing
  observedGeneration: 1
  replicas: 2
  terminatingReplicas: 0
  unavailableReplicas: 2
  updatedReplicas: 2
