internal/web/ui/playground/data/broken-relationships/resources/payments-api__Pod__payments-api-cc7dfd779-khq8q.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: "2026-08-16T18:21:53Z"
  generateName: payments-api-cc7dfd779-
  labels:
    app: payments-api
    pod-template-hash: cc7dfd779
  name: payments-api-cc7dfd779-khq8q
  namespace: payments-api
  ownerReferences:
  - apiVersion: apps/v1
    blockOwnerDeletion: true
    controller: true
    kind: ReplicaSet
    name: payments-api-cc7dfd779
    uid: 4bd69626-e5a6-4a2b-82df-f3c429e05534
  resourceVersion: "17972"
  uid: 465f0101-676b-4e10-a885-f91dbf220e88
spec:
  containers:
  - envFrom:
    - configMapRef:
        name: payments-config-v2
    image: nginx:1.27-alpine
    imagePullPolicy: IfNotPresent
    name: payments-api
    ports:
    - containerPort: 80
      protocol: TCP
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: kube-api-access-nk7v5
      readOnly: true
  dnsPolicy: ClusterFirst
  enableServiceLinks: true
  nodeName: ip-192-168-14-87.us-west-2.compute.internal
  preemptionPolicy: PreemptLowerPriority
  priority: 0
  restartPolicy: Always
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  volumes:
  - name: kube-api-access-nk7v5
    projected:
      defaultMode: 420
      sources:
      - serviceAccountToken:
          expirationSeconds: 3607
          path: token
status:
  conditions:
  - lastTransitionTime: "2026-08-16T18:21:53Z"
    status: "True"
    type: PodScheduled
  - lastTransitionTime: "2026-08-16T18:21:53Z"
    status: "True"
    type: Initialized
  - lastTransitionTime: "2026-08-16T18:21:53Z"
    message: 'containers with unready status: [payments-api]'
    reason: ContainersNotReady
    status: "False"
    type: Ready
  - lastTransitionTime: "2026-08-16T18:21:53Z"
    message: 'containers with unready status: [payments-api]'
    reason: ContainersNotReady
    status: "False"
    type: ContainersReady
  containerStatuses:
  - image: nginx:1.27-alpine
    name: payments-api
    ready: false
    restartCount: 0
    started: false
    state:
      waiting:
        message: 'configmap "payments-config-v2" not found'
        reason: CreateContainerConfigError
  hostIP: 192.168.14.87
  phase: Pending
  qosClass: BestEffort
  startTime: "2026-08-16T18:21:53Z"
