internal/web/ui/playground/data/broken-relationships/resources/platform__Deployment__platform-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: "2026-08-16T18:20:58Z"
  labels:
    app: platform-gateway
  name: platform-gateway
  namespace: platform
  resourceVersion: "17850"
  uid: platform-gateway-deploy-uid
spec:
  replicas: 2
  selector:
    matchLabels:
      app: platform-gateway
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: platform-gateway
    spec:
      containers:
      - envFrom: []
        image: envoyproxy/envoy:v1.30-latest
        imagePullPolicy: IfNotPresent
        name: platform-gateway
        ports:
        - containerPort: 80
          protocol: TCP
        resources:
          limits:
            cpu: 250m
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 64Mi
status:
  availableReplicas: 2
  readyReplicas: 2
  replicas: 2
  updatedReplicas: 2
